initial subproject split
this commit separates 1.19 specific stuff, such as
the config screen and the mixins from the rest